@@ -1,3 +1,7 @@
+2013-02-25  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #45823: Remove hotlist feature
+
 2013-02-24  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #45809: Refactor code and introduce namespacing
